--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 #网站
-sudo pip install Django==1.8.17
-sudo pip install django-crontab
-sudo pip install MySQLdb-1.2.5
-sudo pip install hashlib
+Django==1.8.17
+django-crontab
+MySQLdb-1.2.5
+hashlib
 
 #爬虫
-sudo pip install feedparser
-sudo pip install STMPsendEmail
-sudo pip install json
-sudo pip install rfc822
-sudo pip install smtplib
-sudo pip install email
-sudo pip install selenium
-sudo pip install pytz
+feedparser
+STMPsendEmail
+json
+rfc822
+smtplib
+email
+selenium
+pytz
 
 #es
 #安装中文分词ik
