添加goose安装过程

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,11 @@ smtplib
 email
 selenium
 pytz
-
+#goose
+#git clone https://github.com/grangier/python-goose.git
+#cd python-goose
+#pip install -r requirements.txt
+#python setup.py install
 #es
 #安装中文分词ik
 #https://github.com/medcl/elasticsearch-analysis-ik/releases
